# btc-semantic-analysis

./: .env  .gitignore  README.md  devreadme.md  pyproject.toml  telegram.session  test_adapters.py  test_config.py  test_fix.py
.devcontainer/: Dockerfile.dev  devcontainer.json
notebooks/: btc_sentiment_analysis.ipynb  btc_sentiment_analysis_fixed.ipynb  group_analysis.ipynb
notebooks/data/processed/: daily_sentiment.parquet  daily_sentiment_20250909_191616.parquet  daily_sentiment_20250913_113150.parquet
scripts/: list_telegram_groups.py  run_price_sentiment.py  setup-dev.sh  update_group_config.py
src/btc_sentiment/: __init__.py  cli.py
src/btc_sentiment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/btc_sentiment/adapters/: __init__.py  binance_price_adapter.py  telegram_adapter.py  x_api_adapter.py
src/btc_sentiment/analysis/: telegram_analyzer.py
src/btc_sentiment/config/: config.py
src/btc_sentiment/models/: __init__.py  telegram_message_model.py
src/btc_sentiment/pipelines/: ingest_pipeline.py  price_sentiment_pipeline.py
src/btc_sentiment/services/: aggregator.py  sentiment_service.py
src/btc_sentiment/utils/: analysis.py  io.py  visualizations.py  viz.py
